--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,6 +1,5 @@
 html {
     background-color: rgba(27, 38, 54, 1);
-    text-align: center;
     color: white;
 }
 
@@ -12,15 +11,11 @@ body {
     sans-serif;
 }
 
-@font-face {
+/* @font-face {
     font-family: "Nunito";
     font-style: normal;
     font-weight: 400;
     src: local(""),
     url("assets/fonts/nunito-v16-latin-regular.woff2") format("woff2");
-}
+} */
 
-#app {
-    height: 100vh;
-    text-align: center;
-}
